src/css/cnaminator.css
.suite-inner .ue {
  cursor: pointer;
  padding: 10px 10px;
  border-radius: 3px;
  user-select: none;
}

.suite-inner .ue.disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.suite-inner .ue.selected {
  background-color: #00a6fb;
}

.suite-inner .ue.validated {
  background-color: #57cc99;
}

.cra_opener {
  width: fit-content;
  block-size: fit-content;
}

#teaching-center-selector {
  margin-bottom: 39px;
}

